--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev:nextjs-siwe": "yarn workspace nextjs-siwe run dev",
     "dev:vite": "yarn workspace vite run dev",
     "dev:testbench": "yarn workspace testbench run dev",
-    "build": "node build.js && yarn workspace opconnect run build && cp README.md packages/opconnect/README.md && yarn workspace opconnect-next-siwe run build",
+    "build": "node build.js && yarn workspace opconnect run build  && yarn workspace opconnect-next-siwe run build && cp README.md packages/opconnect/README.md",
     "build:opconnect-next-siwe": "yarn workspace opconnect-next-siwe run build",
     "build:opconnect": "yarn workspace opconnect run build",
     "build:cra": "yarn build && yarn workspace cra build",
