--- a/packages/opconnect-next-siwe/package.json
+++ b/packages/opconnect-next-siwe/package.json
@@ -34,14 +34,14 @@
   ],
   "dependencies": {
     "iron-session": "^6.2.1",
-    "siwe": "^2.1.4"
+    "viem": "^2.13.0"
   },
   "peerDependencies": {
     "next": ">=12.x",
-    "opconnect": ">=1.2.0",
+    "opconnect": ">=0.0.1",
     "react": "17.x || 18.x",
     "react-dom": "17.x || 18.x",
-    "siwe": ">=2"
+    "viem": ">=2.13.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.27",
