--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "scripts": {
     "dev:opconnect": "yarn workspace opconnect run dev",
     "dev:opconnect-next-siwe": "yarn workspace opconnect-next-siwe run dev",
+    "dev:opconnect-next-siwop": "yarn workspace opconnect-next-siwop run dev",
     "dev:cra": "yarn workspace cra run dev",
     "dev:nextjs": "yarn workspace nextjs run dev",
     "dev:nextjs-app": "yarn workspace nextjs-app run dev",
     "dev:nextjs-siwe": "yarn workspace nextjs-siwe run dev",
+    "dev:nextjs-siwop": "yarn workspace nextjs-siwop run dev",
     "dev:vite": "yarn workspace vite run dev",
     "dev:testbench": "yarn workspace testbench run dev",
-    "build": "node build.js && yarn workspace opconnect run build  && yarn workspace opconnect-next-siwe run build && cp README.md packages/opconnect/README.md",
+    "build": "node build.js && yarn workspace opconnect run build && yarn workspace opconnect-next-siwe run build && yarn workspace opconnect-next-siwop run build && cp README.md packages/opconnect/README.md",
     "build:opconnect-next-siwe": "yarn workspace opconnect-next-siwe run build",
+    "build:opconnect-next-siwop": "yarn workspace opconnect-next-siwop run build",
     "build:opconnect": "yarn workspace opconnect run build",
     "build:cra": "yarn build && yarn workspace cra build",
     "build:nextjs": "yarn build && yarn workspace nextjs build",
     "build:nextjs-app": "yarn build && yarn workspace nextjs-app build",
     "build:nextjs-siwe": "yarn build && yarn workspace nextjs-siwe build",
+    "build:nextjs-siwop": "yarn build && yarn workspace nextjs-siwop build",
     "build:vite": "yarn build && yarn workspace vite build",
     "build:testbench": "yarn build && yarn build:opconnect-next-siwe && yarn workspace testbench build",
     "build:ci": "yarn workspaces foreach -R run build",
