--- a/packages/opconnect/package.json
+++ b/packages/opconnect/package.json
@@ -4,7 +4,7 @@
   "license": "BSD-2-Clause license",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/solidity-io/canopy-wallet-connect",
+    "url": "git+https://github.com/cr3labs/other-page-connect",
     "directory": "packages/opconnect"
   },
   "type": "module",
@@ -31,7 +31,7 @@
     "react-hook",
     "blockchain",
     "hooks",
-    "solidityio",
+    "cr3labs",
     "ethereum",
     "react"
   ],
