--- a/examples/nextjs-siwop/.env.example
+++ b/examples/nextjs-siwop/.env.example
@@ -1,3 +1,7 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_ALCHEMY_ID=
 SESSION_SECRET=
+
+SIWOP_CLIENT_ID=
+SIWOP_CLIENT_SECRET=
+SIWOP_REDIRECT_URI=
