chore: configurable API and APP urls

--- a/examples/nextjs-siwop/.env.example
+++ b/examples/nextjs-siwop/.env.example
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
 NEXT_PUBLIC_ALCHEMY_ID=
-SESSION_SECRET=
+NEXT_PUBLIC_SIWOP_REDIRECT_URI=
+NEXT_PUBLIC_SIWOP_CLIENT_ID=
 
-SIWOP_CLIENT_ID=
+SESSION_SECRET=
 SIWOP_CLIENT_SECRET=
-SIWOP_REDIRECT_URI=
