--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@otherpage/connect": "workspace:packages/opconnect",
     "@tanstack/react-query": "^5.17.10",
-    "opconnect": "workspace:packages/opconnect",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.0.6",
