--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "examples/*"
   ],
   "scripts": {
-    "dev:opconnect": "yarn workspace opconnect run dev",
-    "dev:opconnect-next-siwe": "yarn workspace opconnect-next-siwe run dev",
-    "dev:opconnect-next-siwop": "yarn workspace opconnect-next-siwop run dev",
+    "dev:opconnect": "yarn workspace @otherpage/connect run dev",
+    "dev:opconnect-next-siwe": "yarn workspace @otherpage/connect-next-siwe run dev",
+    "dev:opconnect-next-siwop": "yarn workspace @otherpage/connect-next-siwop run dev",
     "dev:cra": "yarn workspace cra run dev",
     "dev:nextjs": "yarn workspace nextjs run dev",
     "dev:nextjs-app": "yarn workspace nextjs-app run dev",
@@ -19,10 +19,10 @@
     "dev:nextjs-siwop": "yarn workspace nextjs-siwop run dev",
     "dev:vite": "yarn workspace vite run dev",
     "dev:testbench": "yarn workspace testbench run dev",
-    "build": "node build.js && yarn workspace opconnect run build && yarn workspace opconnect-next-siwe run build && yarn workspace opconnect-next-siwop run build && cp README.md packages/opconnect/README.md",
-    "build:opconnect-next-siwe": "yarn workspace opconnect-next-siwe run build",
-    "build:opconnect-next-siwop": "yarn workspace opconnect-next-siwop run build",
-    "build:opconnect": "yarn workspace opconnect run build",
+    "build": "node build.js && yarn workspace @otherpage/connect run build && yarn workspace @otherpage/connect-next-siwe run build && yarn workspace @otherpage/connect-next-siwop run build && cp README.md packages/opconnect/README.md",
+    "build:opconnect-next-siwe": "yarn workspace @otherpage/connect-next-siwe run build",
+    "build:opconnect-next-siwop": "yarn workspace @otherpage/connect-next-siwop run build",
+    "build:opconnect": "yarn workspace @otherpage/connect run build",
     "build:cra": "yarn build && yarn workspace cra build",
     "build:nextjs": "yarn build && yarn workspace nextjs build",
     "build:nextjs-app": "yarn build && yarn workspace nextjs-app build",
