--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@otherpage/connect": "workspace:packages/opconnect",
     "@tanstack/react-query": "^5.17.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "opconnect": "workspace:packages/opconnect",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
