--- a/examples/testbench/package.json
+++ b/examples/testbench/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@otherpage/connect": "workspace:packages/opconnect",
+    "@otherpage/connect-next-siwe": "workspace:packages/opconnect-next-siwe",
     "@tanstack/react-query": "^5.17.10",
     "ethers": "^5",
     "local-ssl-proxy": "^1.3.0",
     "next": "14.1.0",
-    "opconnect": "workspace:packages/opconnect",
-    "opconnect-next-siwe": "workspace:packages/opconnect-next-siwe",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "viem": "^2.13.6",
