--- a/packages/opconnect-next-siwe/package.json
+++ b/packages/opconnect-next-siwe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opconnect-next-siwe",
+  "name": "@otherpage/connect-next-siwe",
   "version": "0.0.1",
   "license": "BSD-2-Clause license",
   "repository": {
