--- a/packages/opconnect-next-siwop/package.json
+++ b/packages/opconnect-next-siwop/package.json
@@ -37,8 +37,8 @@
     "viem": "^2.13.0"
   },
   "peerDependencies": {
+    "@otherpage/connect": ">=0.1.0",
     "next": ">=12.x",
-    "opconnect": ">=0.0.1",
     "react": "17.x || 18.x",
     "react-dom": "17.x || 18.x",
     "viem": ">=2.13.3"
