--- a/packages/opconnect/package.json
+++ b/packages/opconnect/package.json
@@ -36,7 +36,7 @@
     "react"
   ],
   "dependencies": {
-    "@otherpage/connect-siwop": "workspace:packages/opconnect-siwop",
+    "@otherpage/connect-siwop": "^0.4.0",
     "buffer": "^6.0.3",
     "detect-browser": "^5.3.0",
     "framer-motion": "^6.3.11",
